--- a/src/main/java/gui/stylesheet.css
+++ b/src/main/java/gui/stylesheet.css
@@ -4,3 +4,10 @@
     -fx-base: rgb(132, 145, 47);
     -fx-background-image: url("././images/light.jpg");
 }
+
+.timer{
+    -fx-border-color: #000000;
+    -fx-border-insets: 5;
+    -fx-border-width: 2;
+    -fx-background-color: white;
+}
