--- a/src/main/java/gui/stylesheet.css
+++ b/src/main/java/gui/stylesheet.css
@@ -5,6 +5,16 @@
     -fx-background-image: url("././images/light.jpg");
 }
 
+.menu-bar{
+    -fx-background-image: url("././images/red.PNG");
+    -fx-font-style: bold;
+}
+
+.button{
+    -fx-border-color: black;
+    -fx-background-image: url("././images/red.PNG");
+}
+
 .progress-reset{
     -fx-border-width: 3px;
     -fx-border-radius: 80%;
