--- a/src/main/java/gui/stylesheet.css
+++ b/src/main/java/gui/stylesheet.css
@@ -2,7 +2,7 @@
     -fx-font-size: 16pt;
     -fx-font-family: "Verdana";
     -fx-base: rgb(132, 145, 47);
-    -fx-background-image: url("././images/blocks.jpg");
+    -fx-background-image: url("././images/blocks2.jpg");
 }
 
 .menu-bar{
