--- a/src/main/java/gui/stylesheet.css
+++ b/src/main/java/gui/stylesheet.css
@@ -2,7 +2,7 @@
     -fx-font-size: 16pt;
     -fx-font-family: "Verdana";
     -fx-base: rgb(132, 145, 47);
-    -fx-background-image: url("././images/blocks.jpg");
+    -fx-background-image: url("././images/backgrounds/blocks.jpg");
 }
 
 .timer{
@@ -17,7 +17,7 @@
 }
 
 .top{
-    -fx-background-image: url("././images/stuff.jpg");
+    -fx-background-image: url("././images/backgrounds/stuff.jpg");
 }
 
 /**
@@ -39,14 +39,13 @@ Stylesheet for approve buttons
 Stylesheets for the menu bar
  */
 .menu-bar{
-    -fx-background-image: url("././images/red.PNG");
+    -fx-background-image: url("././images/backgrounds/red.PNG");
     -fx-font-size: 15pt;
 }
 .menu .label{
     -fx-text-fill: black;
 }
 .context-menu {
-    #-fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
     -fx-background-color: #B2ACAC;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 0 6 6 6, 0 5 5 5, 0 4 4 4;
