Changes layout of chest time progress

--- a/src/main/java/gui/stylesheet.css
+++ b/src/main/java/gui/stylesheet.css
@@ -13,6 +13,10 @@
     -fx-background-image: url("././images/backgrounds/stuff.jpg");
 }
 
+.grid-lines{
+    -fx-grid-lines-visible: true;
+}
+
 /**
 Stylesheet for the media bar buttons (and all other buttons)
  */
