Made the displayed videos scrollable in order to keep the progress bar from being off the screen

--- a/src/main/java/gui/stylesheet.css
+++ b/src/main/java/gui/stylesheet.css
@@ -83,3 +83,7 @@ Stylesheet for warningPane.
     -fx-border-radius: 25px;
     -fx-background-radius: 25px;
 }
+
+.scroll{
+    -fx-base: transparent;
+}
